Fixed the filter button alignment issue (#4010)
* Fixed the styling

* Moved the restricted call to route

--- a/investigate-files/app/styles/investigate-files/files/_manifest.scss
+++ b/investigate-files/app/styles/investigate-files/files/_manifest.scss
@@ -254,7 +254,10 @@ page.investigate-files-engine {
     }
     .host_details_link {
       display: inline-block;
-      width: 150px;
+      width: 200px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
       padding-left: rsa-whitespace(less);
       a {
         color: text-color(secondary);
