--- a/investigate-shared/app/styles/investigate-shared/components/file-actionbar/_manifest.scss
+++ b/investigate-shared/app/styles/investigate-shared/components/file-actionbar/_manifest.scss
@@ -121,3 +121,6 @@
     }
   }
 }
+.toolbar-actions {
+  height: 30px;
+}
